--- a/sections/login.html
+++ b/sections/login.html
@@ -13,9 +13,9 @@
 <body>
     <section class="login">
         <div class="secao__esquerda">
-            <h3 class="subtitulo__esquerda">Como é bom ter você de volta</h3>
+            <h3 class="subtitulo__esquerda">Acesse o PuraMed e Agende Suas Consultas</h3>
             <h2 class="titulo__esquerda">BEM VINDO</h2>
-            <p class="paragrafo__esquerda">Texto que voces decidem ou chat gpt, acho que pode ser uma mensagem falando respeitamos a lei de proteção de dados ou sla qualquer coisa</p>
+            <p class="paragrafo__esquerda">Seja Bem-vindo ao PuraMed — Conecte-se à sua Saúde</p>
         </div>
         <div class="secao__form">
             <h2 class="titulo__form">ENTRAR</h2>
