--- a/sections/esquecia_senha.html
+++ b/sections/esquecia_senha.html
@@ -14,12 +14,12 @@
     <section class="registro">
         <div class="secao__esquerda">
             <h3 class="subtitulo__esquerda">Venha fazer parte da melhor!</h3>
-            <h2 class="titulo__esquerda">CADASTRE-SE</h2>
-            <p class="paragrafo__esquerda">Ainda não tem uma conta? Cadastre-se agora e tenha acesso fácil aos seus agendamentos, histórico de consultas e muito mais. É rápido, seguro e pensado para você!</p>
+            <h2 class="titulo__esquerda">CONTA GRATUITA</h2>
+            <p class="paragrafo__esquerda">Texto que voces decidem ou chat gpt, acho que pode ser uma mensagem falando respeitamos a lei de proteção de dados ou sla qualquer coisa</p>
         </div>
         <div class="secao__form">
             <h2 class="titulo__form">CRIAR CONTA</h2>
-            <p class="paragrafo__form">Na PuraMed, a sua privacidade é uma prioridade. Todos os seus dados estão protegidos de acordo com a Lei Geral de Proteção de Dados (LGPD). Utilizamos suas informações apenas para oferecer um serviço seguro, eficiente e personalizado. Garantimos total sigilo, segurança e transparência no tratamento dos seus dados.</p>
+            <p class="paragrafo__form">Texto que voces decidem ou chat gpt, acho que pode ser uma mensagem falando respeitamos a lei de proteção de dados ou sla qualquer coisa</p>
             <form class="formulario" action="">
                 <input class="formulario__item" type="text" placeholder="CPF" maxlength="14" id="cpf">
                 <input class="formulario__item" type="password" placeholder="Senha" id="senha">
