--- a/sections/login.html
+++ b/sections/login.html
@@ -28,7 +28,7 @@
                     <input class="formulario__check" type="checkbox" id="check">
                     <p class="formulario__check__text">Mantenha Me Conectado</p>
                     <a class="formulario__registro" href="../sections/registro.html">Registre-se</a>
-                    <a class="formulario__recuperarsenha" href="site do maicu">Esqueceu a sua senha?</a>
+                    <a class="formulario__recuperarsenha" href="../sections/esquecia_senha.html">Esqueceu a sua senha?</a>
                 </div>
              
             </form>
