--- a/sections/registro.html
+++ b/sections/registro.html
@@ -19,7 +19,7 @@
         </div>
         <div class="secao__form">
             <h2 class="titulo__form">CRIAR CONTA</h2>
-            <p class="paragrafo__form">Na PuraMed, a sua privacidade é uma prioridade. Todos os seus dados estão protegidos de acordo com a Lei Geral de Proteção de Dados (LGPD). Utilizamos suas informações apenas para oferecer um serviço seguro, eficiente e personalizado. Garantimos total sigilo, segurança e transparência no tratamento dos seus dados.</p>
+            <p class="paragrafo__form">Nós respeitamos sua privacidade e protegemos seus dados conforme a Lei Geral de Proteção de Dados (LGPD). As informações fornecidas no cadastro são usadas apenas para garantir um atendimento seguro, personalizado e eficiente. Ao criar sua conta, você declara estar de acordo com nossos Termos de Uso e nossa Política de Privacidade.</p>
             <form class="formulario" action="">
                 <h3>DADOS PESSOAIS</h3>
                 <input class="formulario__item" type="text" placeholder="CPF" maxlength="14" id="cpf">
