--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
             <a class="menu__link" href="./sections/login.html"><img class="icone__login" src="./img/PERFIL (1).svg" alt="Icone Log-in">Entrar</a>
         </div>
     </header>
-    <section>
+    <section class="banner-inicial">
+    <img src="./img/banner_inicio.svg" alt="Banner inicial da PuraMed" class="banner-img">
+     <div class="banner-texto">
+    <h1>Seu bem-estar começa aqui!<br>A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade. Nosso site é criado para tornar sua experiência mais facil, humana e segura.</h1>
+  </div>
+</section>
         <h2></h2>
         <p></p>
     </section>
