--- a/index.html
+++ b/index.html
@@ -13,22 +13,39 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__nav">
-            <a class="cabecalho__link" href="#">Agendamentos</a>
-            <a class="cabecalho__link" href="#">Quem Somos</a>
+            <a class="cabecalho__link" href="/sections/agendamento.html">Agendamentos</a>
+            <a class="cabecalho__link" href="#sobre">Quem Somos</a>
             <a class="cabecalho__link" href="#">Contato</a>
         </nav>
         <div class="cabecalho__menu">
             <a class="menu__link" href="./sections/login.html"><img class="icone__login" src="./img/PERFIL (1).svg" alt="Icone Log-in">Entrar</a>
         </div>
     </header>
-    <section class="banner-inicial">
-    <img src="./img/banner_inicio.svg" alt="Banner inicial da PuraMed" class="banner-img">
-     <div class="banner-texto">
-    <h1>Seu bem-estar começa aqui!<br>A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade. Nosso site é criado para tornar sua experiência mais facil, humana e segura.</h1>
-  </div>
-</section>
-        <h2></h2>
-        <p></p>
+    <section class="banner__inicial">
+        <div class="banner__img">
+            <img class="image__section" src="./img/banner_inicio.svg" alt="">
+        </div>
+        <div class="banner__texto__container">
+            <h1 class="banner__titulo">Seu bem-estar começa aqui!</h1>
+            <p class="banner__texto">A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade. Nosso site é criado para tornar sua experiência mais facil, humana e segura.</p>
+        <div class="container__mensagem">
+            <h2 class="banner__subtitulo">Bem-vindo à PuraMed!</h2>
+            <p class="banner__texto">Na PuraMed, o seu bem-estar é a nossa prioridade. Somos uma clínica dedicada a oferecer cuidados médicos de excelência, com atenção humanizada, respeito e ética.</p>
+            <p class="banner__texto">Aqui, cada paciente é tratado de forma única, com escuta ativa e acolhimento, proporcionando tratamentos personalizados que promovem saúde, qualidade de vida e equilíbrio.</p>
+            <p class="banner__texto">Nosso compromisso é tornar sua experiência leve, segura e confortável, desde o primeiro contato até o acompanhamento contínuo.</p>
+            <h3 class="banner__slogan">Seja muito bem-vindo à PuraMed — onde cuidar de você é a nossa missão!</h3>
+        </div>
+        </div>
+    </section>
+    <section class="sobre__nos" id="sobre">
+    <div class="container__textos__sobre">
+        <h2 class="titulo__sobre">Sobre Nós</h2>
+        <p class="texto__sobre" >A PuraMed é uma clínica especializada em oferecer tratamentos médicos de qualidade, com foco na promoção da saúde, bem-estar e qualidade de vida de cada paciente.</p>
+        <p class="texto__sobre" >Fundada com a missão de humanizar o atendimento e tornar o cuidado com a saúde mais próximo e acessível, a PuraMed reúne uma equipe de profissionais altamente qualificados, comprometidos com a ética, o respeito e a excelência em cada serviço prestado.</p>
+        <p class="texto__sobre" >Nossa atuação é pautada em valores como:<br>✔️ Empatia - ouvimos e entendemos as necessidades de cada paciente.<br>✔️ Confiança - garantimos segurança e transparência em todos os processos.<br>✔️ Inovação - utilizamos técnicas modernas e atualizadas, sempre buscando os melhores resultados.</p>
+        <p class="texto__sobre" >Na PuraMed, acreditamos que a saúde vai além do tratamento: é cuidado, atenção e compromisso com a sua felicidade e qualidade de vida.</p>
+    </div>
+        <h3 class="subtitulo__sobre">Venha conhecer a nossa clínica e descubra um novo conceito em atendimento médico.</h3>
     </section>
     <footer></footer>
 </body>
