--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__nav">
             <a class="cabecalho__link" href="/sections/agendamento.html">Agendamentos</a>
-            <a class="cabecalho__link" href="#sobre">Quem Somos</a>
+            <a class="cabecalho__link" href="/sections/sobre nos.html">Quem Somos</a>
             <a class="cabecalho__link" href="#">Contato</a>
         </nav>
         <div class="cabecalho__menu">
@@ -36,17 +36,6 @@
             <h3 class="banner__slogan">Seja muito bem-vindo à PuraMed — onde cuidar de você é a nossa missão!</h3>
         </div>
         </div>
-    </section>
-    <section class="sobre__nos" id="sobre">
-    <div class="container__textos__sobre">
-        <h2 class="titulo__sobre">Sobre Nós</h2>
-        <p class="texto__sobre" >A PuraMed é uma clínica especializada em oferecer tratamentos médicos de qualidade, com foco na promoção da saúde, bem-estar e qualidade de vida de cada paciente.</p>
-        <p class="texto__sobre" >Fundada com a missão de humanizar o atendimento e tornar o cuidado com a saúde mais próximo e acessível, a PuraMed reúne uma equipe de profissionais altamente qualificados, comprometidos com a ética, o respeito e a excelência em cada serviço prestado.</p>
-        <p class="texto__sobre" >Nossa atuação é pautada em valores como:<br>✔️ Empatia - ouvimos e entendemos as necessidades de cada paciente.<br>✔️ Confiança - garantimos segurança e transparência em todos os processos.<br>✔️ Inovação - utilizamos técnicas modernas e atualizadas, sempre buscando os melhores resultados.</p>
-        <p class="texto__sobre" >Na PuraMed, acreditamos que a saúde vai além do tratamento: é cuidado, atenção e compromisso com a sua felicidade e qualidade de vida.</p>
-    </div>
-        <h3 class="subtitulo__sobre">Venha conhecer a nossa clínica e descubra um novo conceito em atendimento médico.</h3>
-    </section>
     <footer></footer>
 </body>
 </html>
