--- a/index.html
+++ b/index.html
@@ -22,19 +22,16 @@
         </div>
     </header>
     <section class="banner__inicial">
-        <div class="banner__img">
-            <img class="image__section" src="./img/banner_inicio.svg" alt="">
-        </div>
         <div class="banner__texto__container">
             <h1 class="banner__titulo">Seu bem-estar começa aqui!</h1>
-            <p class="banner__texto">A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade. Nosso site é criado para tornar sua experiência mais facil, humana e segura.</p>
+            <p class="banner__texto unico">A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade. Nosso site é criado para tornar sua experiência mais facil, humana e segura.</p>
+        </div>
         <div class="container__mensagem">
             <h2 class="banner__subtitulo">Bem-vindo à PuraMed!</h2>
             <p class="banner__texto">Na PuraMed, o seu bem-estar é a nossa prioridade. Somos uma clínica dedicada a oferecer cuidados médicos de excelência, com atenção humanizada, respeito e ética.</p>
             <p class="banner__texto">Aqui, cada paciente é tratado de forma única, com escuta ativa e acolhimento, proporcionando tratamentos personalizados que promovem saúde, qualidade de vida e equilíbrio.</p>
             <p class="banner__texto">Nosso compromisso é tornar sua experiência leve, segura e confortável, desde o primeiro contato até o acompanhamento contínuo.</p>
             <h3 class="banner__slogan">Seja muito bem-vindo à PuraMed — onde cuidar de você é a nossa missão!</h3>
-        </div>
         </div>
     </section>
     <section class="sobre__nos" id="sobre">
