--- a/sections/agendamento.html
+++ b/sections/agendamento.html
@@ -22,11 +22,25 @@
         </div>
     </header>
     <section class="agendamento">
-        <select name="" id="">
-            <option value="pediatria">Pediatria</option>
-            <option value="clinicoGeral">Clínico Geral</option>
-            <option value="ginicologista">Ginicologísta</option>
-        </select>
+        <form class="agendamento__form">
+            <label class="campo__grupo">
+                <span class="texto">Área Desejada</span>
+                <select class="area" id="areaDesejada">
+                    <option value="selecione">Selecione</option>
+                    <option value="cred1">Pediatria</option>
+                    <option value="cred2">Clínico Geral</option>
+                    <option value="cred3">Ginicologísta</option>
+                    <option value="cred4">Urologista</option>
+                    <option value="cred5">Dentista</option>
+                    <option value="cred6">Pisciquiatra</option>
+                    <option value="cred7">Cirurgião</option>
+                </label>
+            </select>
+            <span>Descreva brevemente seus sintomas</span>
+            <input type="text" placeholder="Descreva brevemente seus sintomas" maxlength="500" id="descricaoSintomas">
+        </form>
+
+    
     </section>
 </body>
 </html>
