--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__nav">
             <a class="cabecalho__link" href="/sections/agendamento.html">Agendamentos</a>
-            <a class="cabecalho__link" href="#sobre">Quem Somos</a>
+            <a class="cabecalho__link" href="/sections/sobre nos.html">Quem Somos</a>
             <a class="cabecalho__link" href="#">Contato</a>
         </nav>
         <div class="cabecalho__menu">
@@ -23,7 +23,7 @@
     </header>
     <section class="banner__inicial">
         <div class="banner__texto__container">
-            <h1 class="banner__titulo">Seu bem-estar começa aqui!</h1>
+            <h1 class="f">Seu bem-estar começa aqui!</h1>
             <p class="banner__texto unico">A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade. Nosso site é criado para tornar sua experiência mais facil, humana e segura.</p>
         </div>
         <div class="container__mensagem">
