--- a/sections/agendamento.html
+++ b/sections/agendamento.html
@@ -42,5 +42,9 @@
 
     
     </section>
+    <footer class="rodape">
+    <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
+    <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
+</footer>
 </body>
 </html>
