--- a/sections/esquecia_senha.html
+++ b/sections/esquecia_senha.html
@@ -40,7 +40,10 @@
             </form>
         </div>
     </section>
-
+<footer class="rodape">
+    <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
+    <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
+</footer>
 <script src="../apps/password-reset.js"></script>
 </body>
 </html>
