--- a/sections/login.html
+++ b/sections/login.html
@@ -36,5 +36,9 @@
             </form>
         </div>
     </section>
+    <footer class="rodape">
+    <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
+    <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
+</footer>
 </body>
 </html>
