--- a/sections/sobre nos.html
+++ b/sections/sobre nos.html
@@ -25,5 +25,9 @@
     <ssection class="container_imagem">
         <img class="mao_medico" src="../img/MEDICO POST.svg" alt="mao_medico">
     </ssection>
+    <footer class="rodape">
+    <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
+    <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
+</footer>
 </body>
 </html>
