ARRUMANDO AS CAGADA DO MAICACO

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         </div>
     </header>
     <section class="banner__inicial">
-        <div class="banner__texto__container">
-            <h1 class="f">Seu bem-estar começa aqui!</h1>
-            <p class="banner__texto unico">A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade. Nosso site é criado para tornar sua experiência mais facil, humana e segura.</p>
+        <div class="container__mensagem">
+            <h1 class="banner__subtitulo">Seu bem-estar começa aqui!</h1>
+            <p class="banner__texto">A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade.</p>
+            <p class="banner__texto">Nosso site é criado para tornar sua experiência mais facil, humana e segura.</p>
         </div>
         <div class="container__mensagem">
             <h2 class="banner__subtitulo">Bem-vindo à PuraMed!</h2>
@@ -34,6 +35,9 @@
             <h3 class="banner__slogan">Seja muito bem-vindo à PuraMed — onde cuidar de você é a nossa missão!</h3>
         </div>
     </section>
-    <footer></footer>
+   <footer class="rodape">
+    <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
+    <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
+</footer>
 </body>
 </html>
