--- a/sections/sobre nos.html
+++ b/sections/sobre nos.html
@@ -24,6 +24,12 @@
     </div>
     <ssection class="container_imagem">
         <img class="mao_medico" src="../img/MEDICO POST.svg" alt="mao_medico">
-    </ssection>
+    </section>
+
+    <script src="/scripts/login.js"></script>
+    <script>
+        verificarLogin();
+    </script>
+
 </body>
 </html>
