--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a class="cabecalho__link" href="#sobre">Quem Somos</a>
             <a class="cabecalho__link" href="#">Contato</a>
         </nav>
-        <div class="cabecalho__menu">
-            <a class="menu__link" href="./sections/login.html"><img class="icone__login" src="./img/PERFIL (1).svg" alt="Icone Log-in">Entrar</a>
+        <div class="cabecalho__menu" id="menuUsuario">
+            <!-- preenchido dinamicamente -->
         </div>
     </header>
     <section class="banner__inicial">
@@ -35,5 +35,10 @@
         </div>
     </section>
     <footer></footer>
+
+    <script src="/scripts/login.js"></script>
+    <script>
+        verificarLogin();
+    </script>
 </body>
 </html>
