--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </script>
    <footer class="rodape">
     <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
-    <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
+    <p class="texto__rodape">Desenvolvido por Hugo, Clara, Maico e Manel.</p>
 </footer>
 </body>
 </html>
