Java Script do agendametno ACABOOOOO!!!!!

--- a/sections/agendamento.html
+++ b/sections/agendamento.html
@@ -41,7 +41,7 @@
                 </label>
                 <span class="texto__span">Descreva brevemente seus sintomas</span>
                 <input class="desc__sintomas" type="text" placeholder="Descreva brevemente seus sintomas" maxlength="500" id="descricaoSintomas">
-                <button onclick="enviarRelatorio" type="button" class="botao__enviar">Enviar</button>
+                <button type="button" class="botao__enviar">Enviar</button>
             </form>
         </div>
     <div class="resposta">
@@ -51,6 +51,7 @@
         </div>
     </div>
     </section>
- 
+
+    <script src="../scripts/agendamento.js"></script>
 </body>
 </html>
