--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="cabecalho__nav">
             <a class="cabecalho__link" href="/sections/agendamento.html">Agendamentos</a>
             <a class="cabecalho__link" href="/sections/sobre nos.html">Quem Somos</a>
-            <a class="cabecalho__link" href="#">Contato</a>
+            <a class="cabecalho__link" href="/sections/contatos.html">Contato</a>
         </nav>
         <div class="cabecalho__menu" id="menuUsuario">
             <!-- preenchido dinamicamente -->
@@ -35,15 +35,14 @@
             <h3 class="banner__slogan">Seja muito bem-vindo à PuraMed — onde cuidar de você é a nossa missão!</h3>
         </div>
     </section>
-    <footer></footer>
 
     <script src="/scripts/login.js"></script>
     <script>
         verificarLogin();
     </script>
    <footer class="rodape">
-    <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
-    <p class="texto__rodape">Desenvolvido por Hugo, Clara, Maico e Manel.</p>
-</footer>
+        <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
+        <p class="texto__rodape">Desenvolvido por Hugo, Clara, Maico e Manel.</p>
+    </footer>
 </body>
 </html>
