--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="cabecalho__nav">
             <a class="cabecalho__link" href="/sections/agendamento.html">Agendamentos</a>
             <a class="cabecalho__link" href="/sections/sobre nos.html">Quem Somos</a>
-            <a class="cabecalho__link" href="#">Contato</a>
+            <a class="cabecalho__link" href="/sections/contatos.html">Contato</a>
         </nav>
         <div class="cabecalho__menu" id="menuUsuario">
             <!-- preenchido dinamicamente -->
