--- a/sections/sobre nos.html
+++ b/sections/sobre nos.html
@@ -15,7 +15,7 @@
         <nav class="sobre__nos">
         </header> 
         <div class="sobre__nos">
-        <h2 class="titulo__sobre">Sobre Nós</h2>
+        <h2 class="titulo__sobre">SOBRE NOS</h2>
         <p class="texto__sobre" >A PuraMed é uma clínica especializada em oferecer tratamentos médicos de qualidade, com foco na promoção da saúde, bem-estar e qualidade de vida de cada paciente.</p>
         <p class="texto__sobre" >Fundada com a missão de humanizar o atendimento e tornar o cuidado com a saúde mais próximo e acessível, a PuraMed reúne uma equipe de profissionais altamente qualificados, comprometidos com a ética, o respeito e a excelência em cada serviço prestado.</p>
         <p class="texto__sobre" >Nossa atuação é pautada em valores como:<br>✔️ Empatia - ouvimos e entendemos as necessidades de cada paciente.<br>✔️ Confiança - garantimos segurança e transparência em todos os processos.<br>✔️ Inovação - utilizamos técnicas modernas e atualizadas, sempre buscando os melhores resultados.</p>
