--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </script>
    <footer class="rodape">
         <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
-        <p class="texto__rodape">Desenvolvido por Hugo, Clara, Maico e Manel.</p>
+        <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
     </footer>
 </body>
 </html>
