ARRUMANDO UNS NEGOCIO

--- a/sections/agendamento.html
+++ b/sections/agendamento.html
@@ -47,7 +47,7 @@
                     </select>
                 </label>
                 <span class="texto__span">Descreva brevemente seus sintomas</span>
-                <input class="desc__sintomas" type="text" placeholder="Descreva brevemente seus sintomas" maxlength="500" id="descricaoSintomas">
+                <textarea class="desc__sintomas" placeholder="D" maxlength="500" id="descricaoSintomas"></textarea>
                 <input type="date" class="calenadrio" id="selecioneData">
                 <button type="button" class="botao__enviar">Enviar</button>
             </form>
@@ -55,5 +55,9 @@
     </section>
 
     <script src="../scripts/agendamento.js"></script>
+       <footer class="rodape">
+        <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
+        <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
+    </footer>
 </body>
 </html>
