--- a/sections/contatos.html
+++ b/sections/contatos.html
@@ -35,7 +35,7 @@
     </script>
    <footer class="rodape">
         <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
-        <p class="texto__rodape">Desenvolvido por Hugo, Clara, Maico e Manel.</p>
+        <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
     </footer>
 </body>
 </html>
