Escreva aqui mochu

--- a/sections/agendamento.html
+++ b/sections/agendamento.html
@@ -47,7 +47,7 @@
                     </select>
                 </label>
                 <span class="texto__span">Descreva brevemente seus sintomas</span>
-                <textarea class="desc__sintomas" placeholder="Descreva" maxlength="500" id="descricaoSintomas"></textarea>
+                <textarea class="desc__sintomas" placeholder="Escreva aqui" maxlength="500" id="descricaoSintomas"></textarea>
                 <input type="date" class="calenadrio" id="selecioneData">
                 <button type="button" class="botao__enviar">Enviar</button>
             </form>
