Manutenção do codigo, modificações no js, sections novas e responsividade 1024px (tablete)

--- a/sections/registro.html
+++ b/sections/registro.html
@@ -26,7 +26,7 @@
                 <input class="formulario__item" type="text" placeholder="Nome Completo" id="nome">
                 <input class="formulario__item" type="date" placeholder="Data de nascimento" id="">
             </form>
-            <form class="formulario formulario__outro" action="">
+            <form class="formulario" action="">
                 <h3>INFORMAÇÕES DE CONTATO</h3>
                 <input class="formulario__item" type="tel" placeholder="Celular" id="celular">
                 <input class="formulario__item" type="email" placeholder="E-mail" id="email">
@@ -34,7 +34,7 @@
                 <input class="formulario__item" type="password" placeholder="Senha" id="senha">
                 <input class="formulario__item" type="password" placeholder="Confirmar Senha" id="confirmarSenha">
             </form>
-            <form class="formulario formulario__outro" action="">
+            <form class="formulario" action="">
                 <h3>ENDEREÇO</h3>
                 <input class="formulario__item" type="text" maxlength="8" placeholder="CEP" id="cep">
                 <input class="formulario__item" type="text" placeholder="Endereço" id="endereco">
@@ -45,13 +45,13 @@
                 <input class="formulario__item" type="text" placeholder="Cidade" id="cidade">
                 <div class="formulario__others">
                     <input class="formulario__check" type="checkbox" id="check">
-                    <p class="formulario__check__text">Aceito os <a class="formulario__registro" href="../TERMO DE POLITICA.txt">Termos e Política</a></p>
+                    <p class="formulario__check__text">Aceito os <a class="formulario__termos" href="../TERMO DE POLITICA.txt">Termos e Política</a></p>
                 </div>
                 <button class="formulario__button" onclick="pegarDados()">CRIAR CONTA</button>
             </form>
         </div>
     </section>
-    <footer class="rodape">
+<footer class="rodape">
     <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
     <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
 </footer>
