--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__nav">
-            <a class="cabecalho__link" href="/sections/agendamento.html">Agendamentos</a>
+            <a class="cabecalho__link" href="/sections/agendamento.html" onclick="verificarAcessoAgendamento(event)">Agendamentos</a>
             <a class="cabecalho__link" href="/sections/sobre nos.html">Quem Somos</a>
             <a class="cabecalho__link" href="/sections/contatos.html">Contato</a>
         </nav>
@@ -22,6 +22,7 @@
         </div>
     </header>
     <section class="banner__inicial">
+        <img class="logo__inicial" src="" alt="Logo da Clínica">
         <div class="container__mensagem">
             <h1 class="banner__subtitulo">Seu bem-estar começa aqui!</h1>
             <p class="banner__texto">A PuraMed é uma clínica feita para quem busca saúde, atenção e cuidado de verdade.</p>
@@ -35,14 +36,14 @@
             <h3 class="banner__slogan">Seja muito bem-vindo à PuraMed — onde cuidar de você é a nossa missão!</h3>
         </div>
     </section>
-
-    <script src="/scripts/login.js"></script>
-    <script>
-        verificarLogin();
-    </script>
    <footer class="rodape">
         <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
         <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
     </footer>
+    <script src="/scripts/login.js"></script>
+    <script>
+        verificarLogin();
+        protegerPaginaAgendamento();
+    </script>
 </body>
 </html>
