--- a/sections/esquecia_senha.html
+++ b/sections/esquecia_senha.html
@@ -44,6 +44,6 @@
     <p class="texto__rodape">© 2025 PuraMed | Todos os direitos reservados.</p>
     <p class="texto__rodape">Desenvolvido por Hugo e Clara.</p>
 </footer>
-<script src="../apps/password-reset.js"></script>
+<script src="../scripts/password-reset.js"></script>
 </body>
 </html>
